@@ -2,11 +2,20 @@ package com.example.onculture.domain.event.service;
 
 import com.example.onculture.domain.event.domain.Performance;
 import com.example.onculture.domain.event.dto.*;
+import com.example.onculture.domain.event.repository.BookmarkRepository;
 import com.example.onculture.domain.event.repository.PerformanceRepository;
 import com.example.onculture.global.exception.CustomException;
 import com.example.onculture.global.exception.ErrorCode;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.Predicate;
+import jdk.jfr.Event;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -22,11 +31,13 @@ public class PerformanceService {
     private final RestTemplate restTemplate;
     private final PerformanceRepository performanceRepository;
     private final XmlMapper xmlMapper;
+    private final BookmarkRepository bookmarkRepository;
     private static final String BASE_URL = "http://www.kopis.or.kr/openApi/restful/pblprfr";
     @Value("${KOPIS_SERVICE_KEY}")
     private String SERVICE_KEY;
 
-    public PerformanceService(PerformanceRepository performanceRepository) {
+    public PerformanceService(PerformanceRepository performanceRepository, BookmarkRepository bookmarkRepository) {
+        this.bookmarkRepository = bookmarkRepository;
         this.restTemplate = new RestTemplate();
         this.performanceRepository = performanceRepository;
         this.xmlMapper = new XmlMapper();
@@ -52,16 +63,86 @@ public class PerformanceService {
         performanceRepository.saveAll(performanceList);
     }
 
-    public List<EventResponseDTO> getRandomPerformances(int randomSize) {
+    public List<EventResponseDTO> getRandomPerformances(int randomSize, Long userId) {
         if (randomSize < 0) {
             throw new CustomException(ErrorCode.INVALID_INPUT_VALUE);
         }
 
         return performanceRepository.findRandomPerformances(randomSize)
                 .stream()
-                .map(EventResponseDTO::new)
+                .map(performance -> {
+                    boolean isBookmarked = userId != null &&
+                            bookmarkRepository.findByUserIdAndPerformanceId(userId, performance.getId())
+                                    .isPresent();
+                    return new EventResponseDTO(performance, isBookmarked);
+                })
                 .toList();
     }
+
+
+    public EventPageResponseDTO searchPerformances(String region, String status, String titleKeyword, int pageNum, int pageSize, Long userId) {
+        Specification<Performance> spec = (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+
+            if (titleKeyword != null && !titleKeyword.trim().isEmpty()) {
+                Expression<String> titleExpression = root.get("performanceTitle").as(String.class);
+                Expression<String> lowerTitle = criteriaBuilder.lower(titleExpression);
+
+                predicates.add(
+                        criteriaBuilder.like(
+                                lowerTitle,
+                                "%" + titleKeyword.toLowerCase() + "%"
+                        )
+                );
+            }
+
+            if (region != null && !region.trim().isEmpty()) {
+                predicates.add(criteriaBuilder.equal(root.get("area"), region));
+            }
+
+            if (status != null && !status.trim().isEmpty()) {
+                predicates.add(criteriaBuilder.equal(root.get("performanceState"), status));
+            }
+
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        };
+
+        Pageable pageable = PageRequest.of(pageNum, pageSize);
+        Page<Performance> performancePage = performanceRepository.findAll(spec, pageable);
+
+        List<EventResponseDTO> posts = performancePage.getContent()
+                .stream()
+                .map(performance -> {
+                    boolean isBookmarked = userId != null &&
+                            bookmarkRepository.findByUserIdAndPerformanceId(userId, performance.getId())
+                                    .isPresent();
+                    return new EventResponseDTO(performance, isBookmarked);
+                })
+                .toList();
+
+        EventPageResponseDTO response = new EventPageResponseDTO();
+        response.setPosts(posts);
+        response.setTotalPages(performancePage.getTotalPages());
+        response.setTotalElements(performancePage.getTotalElements());
+        response.setPageNum(performancePage.getNumber());
+        response.setPageSize(performancePage.getSize());
+        response.setNumberOfElements(performancePage.getNumberOfElements());
+
+        return response;
+    }
+
+
+    public EventResponseDTO getPerformance(Long performanceId, Long userId) {
+        Performance performance = performanceRepository.findById(performanceId)
+                .orElseThrow(() -> new CustomException(ErrorCode.NO_CONTENT));
+
+        boolean isBookmarked = userId != null &&
+                bookmarkRepository.findByUserIdAndPerformanceId(userId, performanceId)
+                        .isPresent();
+
+        return new EventResponseDTO(performance, isBookmarked);
+    }
+
 
     private List<String> fetchPerformanceIds(String from, String to, String genreCode, String status) {
         List<String> performanceIds = new ArrayList<>();
@@ -78,7 +159,7 @@ public class PerformanceService {
                 performanceIds.addAll(
                         listDTO.getPerformanceDTOS().stream()
                                 .map(PerformanceDTO::getMt20id)
-                                .collect(Collectors.toList()));
+                                .toList());
             } catch (Exception e) {
                 throw new RuntimeException("XML Parsing Error: 공연 목록, page: " + page, e);
             }
